test: implementa testes de integração para cadastro de baralho usando h2